--- a/index.html
+++ b/index.html
@@ -5,11 +5,109 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
+        rel="stylesheet">
+    <link rel="icon" href="./img/logo.png">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Dropbox</title>
 </head>
 
 <body>
 
+    <header>
+        <div class="topbar">
+            <nav class="main-menu"></nav>
+            <nav class="secondary-menu"></nav>
+        </div>
+        <div class="hero">
+            <h1></h1>
+            <div class="clearfix">
+                <div class="col">
+                    <p></p>
+                    <a href=""></a>
+                    <div></div>
+                </div>
+                <div class="col">
+                    <img src="" alt="">
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main>
+
+        <section>
+            <h2></h2>
+            <div></div>
+            <div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+            </div>
+            <div></div>
+            <div></div>
+        </section>
+
+        <section>
+            <h2></h2>
+            <div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+            </div>
+            <div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+            </div>
+        </section>
+
+        <section>
+            <h2></h2>
+            <a href=""></a>
+            <div>
+                <div class="col">
+                    <div class="col"></div>
+                    <div class="col"></div>
+                </div>
+                <div class="col"></div>
+                <div class="col">
+                    <div class="col"></div>
+                    <div class="col"></div>
+                </div>
+            </div>
+            <div>
+                <div class="col"></div>
+                <div class="col"></div>
+            </div>
+        </section>
+
+        <section>
+            <h2></h2>
+            <hr>
+            <div></div>
+            <hr>
+            <div></div>
+            <hr>
+            <div></div>
+            <hr>
+            <div></div>
+            <hr>
+        </section>
+
+    </main>
 </body>
+
+<footer>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+    <hr>
+    <div></div>
+</footer>
 
 </html>
