--- a/index.html
+++ b/index.html
@@ -17,9 +17,23 @@
 <body>
 
     <header>
-        <div class="topbar">
-            <nav class="main-menu"></nav>
-            <nav class="secondary-menu"></nav>
+        <div class="topbar clearfix">
+            <nav class="main-menu col w-50">
+                <ul>
+                    <li><a href="#"><img class="logo" src="./img/logo-small.png" alt="Logo Dropbox"></a></li>
+                    <li><a href="#">Perché Dropbox?</a></li>
+                    <li><a href="#">Funzioni</a></li>
+                    <li><a href="#">Piani e prezzi</a></li>
+                </ul>
+            </nav>
+            <nav class="secondary-menu col w-50 text-right">
+                <ul>
+                    <li><a href="#">Supporto</a></li>
+                    <li><a href="#">Contatta l'ufficio vendite</a></li>
+                    <li><a href="#">Accedi</a></li>
+                </ul>
+                <a class="btn text-white bg-blue" href="#">Inizia</a>
+            </nav>
         </div>
         <div class="hero">
             <h1></h1>
@@ -98,16 +112,17 @@
         </section>
 
     </main>
-</body>
 
-<footer>
-    <div class="col"></div>
-    <div class="col"></div>
-    <div class="col"></div>
-    <div class="col"></div>
-    <div class="col"></div>
-    <hr>
-    <div></div>
-</footer>
+    <footer>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <hr>
+        <div></div>
+    </footer>
+
+</body>
 
 </html>
