--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="hero">
             <div class="container-80">
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
-                <div class="clearfix">
+                <div class="clearfix row">
                     <div class="col w-40">
                         <p class="size-15">
                             Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso
