Aggiunta sezione partner

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
         <div class="topbar clearfix size-15">
             <nav class="main-menu col w-50">
                 <ul>
-                    <li><a href="#"><img class="logo" src="./img/logo-small.png" alt="Logo Dropbox"></a></li>
+                    <li class="home">
+                        <a href="#">
+                            <img class="logo" src="./img/logo-small.png" alt="Logo Dropbox">
+                        </a>
+                    </li>
                     <li><a href="#">Perché Dropbox?</a></li>
                     <li><a href="#">Funzioni</a></li>
                     <li><a href="#">Piani e prezzi</a></li>
@@ -84,7 +88,7 @@
                     Fatturazione annuale
                 </div>
             </div>
-            <div class="columns clearfix">
+            <div class="columns clearfix mb-50">
 
                 <div class="col w-33 left">
                     <div class="contain">
@@ -287,12 +291,48 @@
                 </div>
 
             </div>
-
-            <div></div>
-            <div></div>
+            <div class="contain enterprise">
+                <div class="plan-target text-center">
+                    <i class="far fa-building"></i>
+                    Team
+                </div>
+                <div class="plan-info clearfix mb-20">
+                    <div class="col w-70">
+                        <h3 class="mb-10">Enterprise</h3>
+                        <h4 class="mb-20">Contatta l'ufficio vendite per i prezzi</h4>
+                        <div class="size-13">
+                            Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella
+                            gestione su qualsiasi scala.
+                        </div>
+                    </div>
+                    <div class="col w-30">
+                        <a class="btn bg-blue text-white text-center w-100 size-13" href="#">
+                            Contatta l'ufficio vendite
+                        </a>
+                    </div>
+                </div>
+            </div>
         </section>
 
-        <section>
+        <!-- Sezione trova il tuo partner -->
+        <section class="partner container-65">
+            <div class="partner-for-you clearfix">
+                <div class="col left w-50">
+                    <img src="./img/partner.png" alt="Trova un partner">
+                </div>
+                <div class="col right w-50">
+                    <h3 class="mb-30">Entra in contatto con un partner Dropbox</h3>
+                    <p class="mb-30">
+                        Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per
+                        raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e
+                        supporto continui.
+                    </p>
+                    <a class="btn text-black bg-white" href="#">Trova un partner</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="container-65">
             <h2></h2>
             <div>
                 <div class="col"></div>
