Aggiunta sezione features

--- a/index.html
+++ b/index.html
@@ -332,17 +332,66 @@
             </div>
         </section>
 
-        <section class="container-65">
-            <h2></h2>
-            <div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
+        <!-- Sezione contenente le features -->
+        <section class="features container-65">
+            <h2 class="mb-50">Esegui più operazioni con Dropbox Business</h2>
+            <div class="columns clearfix">
+                <div class="col left w-33">
+                    <div class="image switching"></div>
+                    <h3 class="mb-20">Passa di meno da uno strumento all'altro</h3>
+                    <p>
+                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                        contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                        <u>Dropbox Paper</u> direttamente da Dropbox.
+                    </p>
+                </div>
+                <div class="col center w-33">
+                    <div class="image coordinate"></div>
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>
+                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                        contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                        <u>Dropbox Paper</u> direttamente da Dropbox.
+                    </p>
+                </div>
+                <div class="col right w-33">
+                    <div class="image multi-device"></div>
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>
+                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                        contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                        <u>Dropbox Paper</u> direttamente da Dropbox.
+                    </p>
+                </div>
             </div>
-            <div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
+            <div class="columns clearfix">
+                <div class="col left w-33">
+                    <div class="image integrations"></div>
+                    <h3 class="mb-20">Passa di meno da uno strumento all'altro</h3>
+                    <p>
+                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                        contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                        <u>Dropbox Paper</u> direttamente da Dropbox.
+                    </p>
+                </div>
+                <div class="col center w-33">
+                    <div class="image send-files"></div>
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>
+                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                        contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                        <u>Dropbox Paper</u> direttamente da Dropbox.
+                    </p>
+                </div>
+                <div class="col right w-33">
+                    <div class="image security"></div>
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>
+                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                        contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                        <u>Dropbox Paper</u> direttamente da Dropbox.
+                    </p>
+                </div>
             </div>
         </section>
 
