Aggiunta sezione clienti

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                     </a>
                                 </div>
                                 <div class="size-13 buy-now mb-20">
-                                    oppure <a href="#">acquista ora</a>
+                                    oppure <a class="text-blue" href="#">acquista ora</a>
                                 </div>
                             </div>
                             <hr class="w-20 mb-30">
@@ -185,7 +185,7 @@
                                     </a>
                                 </div>
                                 <div class="size-13 buy-now mb-20">
-                                    oppure <a href="#">acquista ora</a>
+                                    oppure <a class="text-blue" href="#">acquista ora</a>
                                 </div>
                             </div>
                             <hr class="w-20 mb-30">
@@ -253,7 +253,7 @@
                                     </a>
                                 </div>
                                 <div class="size-13 buy-now mb-20">
-                                    oppure <a href="#">acquista ora</a>
+                                    oppure <a class="text-blue" href="#">acquista ora</a>
                                 </div>
                             </div>
                             <hr class="w-20 mb-30">
@@ -395,23 +395,66 @@
             </div>
         </section>
 
-        <section>
-            <h2></h2>
-            <a href=""></a>
-            <div>
-                <div class="col">
-                    <div class="col"></div>
-                    <div class="col"></div>
-                </div>
-                <div class="col"></div>
-                <div class="col">
-                    <div class="col"></div>
-                    <div class="col"></div>
-                </div>
+        <section class="clients">
+            <div class="container-80 mb-50">
+                <h2 class="mb-20">
+                    Più di 500.000 team <br>
+                    utilizzano Dropbox Business
+                </h2>
+                <a class="text-blue size-14" href="#">
+                    Scopri di più sui nostri clienti
+                </a>
             </div>
-            <div>
-                <div class="col"></div>
-                <div class="col"></div>
+            <div class="clearfix">
+                <div class="col left w-30">
+                    <div class="row clearfix">
+                        <div class="client one col w-50">
+                            <img src="./img/designit.svg" alt="DesignIT">
+                        </div>
+                        <div class="client two col w-50">
+                            <img src="./img/arizona_state_university.svg" alt="Arizona State University">
+                        </div>
+                    </div>
+                    <div class="row clearfix">
+                        <div class="client three col w-50">
+                            <img src="./img/university_of_florida.svg" alt="University of Florida">
+                        </div>
+                        <div class="client four col w-50">
+                            <img src="./img/topps.svg" alt="Topps">
+                        </div>
+                    </div>
+                </div>
+                <div class="col center w-40">
+                    <img class="mb-30" src="./img/designit.svg" alt="">
+                    <hr class="mb-40">
+                    <p class="mb-50">
+                        "I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora
+                        molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e
+                        Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile
+                        quanto Dropbox Paper".
+                    </p>
+                    <div>
+                        Morten Thomsen, Global IT Lead
+                    </div>
+                </div>
+                <div class="col right w-30">
+                    <div class="row clearfix">
+                        <div class="client five col w-50">
+                            <img src="./img/world_bicycle_relief.svg" alt="World Bicycle Relief">
+                        </div>
+                        <div class="client six col w-50">
+                            <img src="./img/hearst_corp.svg" alt="Hearst Corp">
+                        </div>
+                    </div>
+                    <div class="row clearfix">
+                        <div class="client seven col w-50 ">
+                            <img src="./img/lonely_planet.svg" alt="Lonely Planet">
+                        </div>
+                        <div class="client eight col w-50">
+                            <img src="./img/clear_channel.svg" alt="Clear Channel">
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
