Aggiunta call to action

--- a/index.html
+++ b/index.html
@@ -396,10 +396,9 @@
         </section>
 
         <section class="clients">
-            <div class="container-80 mb-50">
-                <h2 class="mb-20">
-                    Più di 500.000 team <br>
-                    utilizzano Dropbox Business
+            <div class="container-65 mb-50">
+                <h2 class="mb-20 w-50">
+                    Più di 500.000 team utilizzano Dropbox Business
                 </h2>
                 <a class="text-blue size-14" href="#">
                     Scopri di più sui nostri clienti
@@ -453,6 +452,16 @@
                         <div class="client eight col w-50">
                             <img src="./img/clear_channel.svg" alt="Clear Channel">
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="call-to-action">
+                <div class="clearfix container-65">
+                    <div class="col w-50">
+                        <h2>Porta Dropbox Business nella tua azienda</h2>
+                    </div>
+                    <div class="col w-50 text-right">
+                        <a class="btn bg-white text-black" href="#" class="btn">Inizia la tua prova gratuita</a>
                     </div>
                 </div>
             </div>
